styles/style.css
/* header */

.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  width: 1100px;
}

.header_menu {
  font-size: 18px;
  font-weight: 100;
  line-height: 1.16em;
  text-align: left;
}

.header_links-list {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding: 2px 0px 8px 6px;
}

.header__links-list-item {
  list-style: circle;
  margin-right: 3px;
}

.header__links-list-item_no-bullit {
  list-style-type: none;
  margin-left: 10px;
}

.header__link {
  text-decoration: none;
}

.header__link_active {
  text-decoration: underline;
  text-underline-position: under;
}

.header__logo {
  display: block;
  padding-top: 92px;
  padding-bottom: 92px;
}

.header__logo-image {
  width: 148px;
  height: 105px;
}

.address {
  font-size: 18px;
  font-weight: 100;
  line-height: 1.35em;
  text-align: left;
  font-style: normal;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  justify-self: end;
}

.address a {
  text-decoration: underline;
  text-underline-position: under;
}

.header_adress {
  margin-right: 50px;
  margin-top: 95px;
  margin-bottom: 100px;
  max-width: 240px;
  width: 240px;
}

.cover {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-image: url(../images/cover.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
  width: 1100px;
  min-height: 757px;
  
}

.overlay {
  inset: 0;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.6);
  width: 100%;
  height: 100%;
  
}

.cover__title {
  display: flex;
  flex-direction: column;
  padding: 165px 50px 107px 50px;
  color: #ffffff;
  letter-spacing: 30px;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 100px;
  line-height: 1.15em;
  position: relative;
}

.aligned-text {
  align-self: start;
}

.aligned-text_center {
  align-self: center;
  padding-top: 19px;
}

.aligned-text_right {
  align-self: end;
  padding-top: 20px;
}

.no-letter-spacing {
  letter-spacing: normal;
}

.cover__description {
  width: 1000px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 50px;
  margin-left: 50px;
  margin-right: 50px;
  position: relative;
}

.cover__description-text {
  color: rgb(255, 255, 255);
  font-size: 22px;
  font-weight: 400;
  line-height: 1.27em;
  text-transform: uppercase;
  word-spacing: 19px;
}

.cover__description-text_small_word_spacing {
  word-spacing: 18px;
}

.bet-button {
  width: 256px;
  height: 51px;
  border: 1px solid white;
  background-color: transparent;
  color: #fff;
  font-size: 22px;
  line-height: 1.18em;
  font-weight: 500;
  text-align: center;
  text-transform: uppercase;
}

.lots {
  margin-top: 180px;
  margin-left: 24px;
  margin-right: 24px;
  margin-bottom: 120px;
}

.lots__heading {
  padding-bottom: 27px;
  padding-left: 40px;
  color: rgb(0, 0, 0);
  font-size: 40px;
  font-weight: 700;
  line-height: 1.17em;
  text-align: left;
  text-transform: uppercase;
}

.lots__card-list {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  gap: 25px;
  justify-content: space-between;
}

.lots__card-list-item {
  list-style-type: none;
  width: 334px;
  min-height: 596px;
}

.lots__card-list-item article {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card {
  background-position: center;
  background-size: cover;
  position: relative;
  z-index: 2;
}

.card-link {
  text-decoration: none;
  height: 100%;
}

.card_type_film {
  background-image: url(../images/card-lot-01.jpg);

}

.card_type_book {
  background-image: url(../images/card-lot-02.jpg);
}

.card_type_picture {
  background-image: url(../images/card-lot-03.jpg);
}

.card_title {
  color: rgb(255, 255, 255);
  font-size: 22px;
  font-weight: 700;
  line-height: 1.2em;
  text-align: left;
  text-decoration-line: underline;
  text-transform: uppercase;
  text-underline-offset: 3px;
  padding: 48px 40px 0 40px;
}

.card__text {
  color: rgb(255, 255, 255);
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  text-align: left;
  padding: 0px 40px 48px 40px;
}

.lots__look-more-link {
  display: block;
  padding-top: 30px;
  color: black;
  font-size: 20px;
  font-weight: 400;
  line-height: 1.17em;
  margin-left: 40px;
  text-decoration-line: underline;
  text-underline-position: under;
}

.about {
  margin-top: 120px;
  display: grid;
  grid-template-columns: 334px repeat(1, 1fr);
  align-items: start;
  gap: 25px;
  padding: 35px 24px 0px;
}

.about__column {
  margin-top: 100px;
}

.about__logo {
  justify-self: center;
  background-color: #000;
  border-radius: 50%;
  width: 240px;
  height: 240px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.about__logo-image {
  width: 148px;
  height: 114px;
}

.about__title {
  color: black;
  font-size: 40px;
  font-weight: 700;
  line-height: 1.17em;
  text-transform: uppercase;
  padding-top: 2px;
}

.about__text {
  color: black;
  font-size: 20px;
  font-weight: 400;
  line-height: 1.2em;
}

.about__text-start {
  padding-top: 100px;
}

.about__text-end {
  padding-top: 23px;
}

.footer {
  margin-top: 180px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: start;
  justify-items: center;
  padding-left: 50px;
  padding-right: 50px;
  gap: 140px;
  width: 1100px;
  height: 180px;
}

.footer__menu {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-top: 1px;
}

.footer__menu-list {
  list-style-type: none;
}

.footer__menu-list-item {
  color: rgb(0, 0, 0);
  font-size: 18px;
  font-weight: 100;
  line-height: 1.17em;
  text-align: center;
}

.footer__menu-link {
  text-decoration-line: none;
}

.footer__menu-link_active {
  text-decoration-line: underline;
  text-underline-position: under;
}

.footer__social-list {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  list-style-type: none;
  width: 240px;
  height: 48px;
  gap: 48px;
}

.footer__social-list-item {
  margin-top: 1px;
}

.footer__social-link {
  color: black;
  text-align: center;
  font-size: 18px;
  font-weight: 400;
}

.footer__social-icon {
  padding: 0px;
  gap: 48px;
  width: 48px;
  height: 48px;
}

